[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 928.0
margin_top = 578.0
margin_right = 992.0
margin_bottom = 622.0
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 102.0
margin_bottom = 20.0
text = "Shothun"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 102.0
margin_bottom = 44.0
text = "Sniper"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 102.0
margin_bottom = 68.0
text = "Scoped Sniper"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
